--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "next-handler",
   "version": "0.1.8",
   "description": "",
-  "type": "module",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
+    "test": "jest",
     "build": "tsc",
     "prepublishOnly": "yarn build"
   },
@@ -20,6 +20,12 @@
   },
   "packageManager": "yarn@3.1.0",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
 }
