--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^27.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "zod": "^3.11.6"
   }
 }
