--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
     "@types/supertest": "^2.0.11",
+    "expect-type": "^0.13.0",
     "jest": "^27.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
