🔧 Exclude tests from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "declaration": true,
     "moduleResolution": "node",
     "strictNullChecks": true
-  }
+  },
+  "include": ["./src", "./test"]
 }
